# ref-app

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  NOTICE  README.md  netlify.toml  renovate.json  taylor_diagram.html  towncrier.toml
backend/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml
backend/scripts/: generate_metadata.py
backend/src/ref_backend/: __init__.py  backend_pre_start.py  builder.py  log.py  main.py  models.py  testing.py  tests_pre_start.py
backend/src/ref_backend/api/: __init__.py  deps.py  main.py
backend/src/ref_backend/api/routes/: __init__.py  aft.py  datasets.py  diagnostics.py  executions.py  explorer.py  metrics.py  results.py  utils.py
backend/src/ref_backend/core/: __init__.py  aft.py  collections.py  config.py  db.py  diagnostic_metadata.py  file_handling.py  filter_utils.py  json_utils.py  metric_values.py  outliers.py  reader_values.py  ref.py
backend/static/aft/: AFT REF Diagnostics-v2_draft_clean.csv  ref_mapping.yaml
backend/static/collections/: 1-1_sea-ice-sensitivity.yaml  1-2_amoc.yaml  1-3_enso.yaml  1-4_sst-sss-bias.yaml  1-5_ocean-heat-content.yaml  1-6_sea-ice-area.yaml  1.1.yaml  1.2.yaml  1.3.yaml  1.4.yaml  1.5.yaml  1.6.yaml  2-2_gross-primary-production.yaml  2-3_runoff.yaml  2-4_surface-soil-moisture.yaml  2-5_net-ecosystem-carbon-balance.yaml  2-6_leaf-area-index.yaml  2-7_snow-cover.yaml  2.1.yaml  2.3.yaml  2.6.yaml  2.7.yaml  3-1_annual-cycle.yaml  3-2_radiative-heat-fluxes.yaml  3-3_climate-variability-modes.yaml  3-6_cloud-radiative-effects.yaml  3-7_cloud-scatterplots.yaml  3.1.yaml  3.2.yaml  3.3.yaml  3.6.yaml  3.7.yaml  4-1_equilibrium-climate-sensitivity.yaml  4-2_transient-climate-response.yaml  4-3_tcre.yaml  4-4_zero-emissions-commitment.yaml  4-5_historical-changes.yaml  4.1.yaml  4.2.yaml  4.3.yaml  (+8 more)
backend/static/diagnostics/: esmvaltool.yaml  ilamb.yaml  metadata.yaml  pmp.yaml
backend/stubs/fastapi_sqlalchemy_monitor/: __init__.pyi  action.pyi  middleware.pyi  statistics.pyi
backend/tests/: conftest.py  test_spa_fallback.py
backend/tests/api/routes/: test_executions.py  test_utils.py
backend/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/tests/test-data/: .gitignore  README.md
backend/tests/test-data/example/: .gitignore  ref.toml
backend/tests/test-data/example/db/: climate_ref.db
backend/tests/test-data/example/results/example/global-mean-timeseries/bdb5ac844624020c766297d3923378758aa4ca7e/: diagnostic.json
backend/tests/test-data/tests.integration.test_cmip7_aft/test_solve_cmip7_aft/: ref.toml
backend/tests/test-data/tests.integration.test_cmip7_aft/test_solve_cmip7_aft/db/: climate_ref.db
backend/tests/test-data/tests.integration.test_cmip7_aft/test_solve_cmip7_aft/results/esmvaltool/climate-at-global-warming-levels/11c24125584949c5e26f41db578ebcfedb0eaf67/: output.json
backend/tests/test-data/tests.integration.test_cmip7_aft/test_solve_cmip7_aft/results/ilamb/amoc-rapid/288823fdc8b252e44b667a1576dcf46171990bd2/: output.json  (+1 more)
backend/tests/test_api/: test_api_explorer.py  test_cors.py
backend/tests/test_api/test_routes/: test_aft.py  test_datasets.py  test_diagnostics.py  test_executions.py  test_results.py  test_utils.py
backend/tests/test_core/: test_config.py  test_core_aft.py  test_core_collections.py  test_diagnostic_metadata.py  test_file_handling.py  test_filter_utils.py  test_json_utils.py  test_metric_values.py  test_outliers.py  test_reader_values.py  test_ref.py
(+391 files in other folders)
