[project]
name = "ref-backend"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "python-multipart<1.0.0,>=0.0.7",
    "tenacity<9.0.0,>=8.2.3",
    "pydantic>2.0",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "pydantic-settings<3.0.0,>=2.2.1",
    "sentry-sdk[fastapi]<2.0.0,>=1.40.6",
    #    "cmip-ref[metrics,postgres]>=0.2.0",
    "ilamb3",
    "pcmdi-metrics",
    "climate-ref[metrics,postgres]==0.2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "pre-commit<4.0.0,>=3.6.2",
    "coverage<8.0.0,>=7.4.3",
]

[tool.uv.sources]
pcmdi-metrics = { git = "https://github.com/PCMDI/pcmdi_metrics", rev = "v3.9.1" }
climate-ref = { path = "../../climate-ref/packages/climate-ref", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

