[project]
name = "ref-backend"
version = "0.1.0"
description = "Backend for the Climate Rapid Evaluation Framework"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "python-multipart<1.0.0,>=0.0.7",
    "tenacity<9.0.0,>=8.2.3",
    "pydantic>2.0",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "pydantic-settings<3.0.0,>=2.2.1",
    "sentry-sdk[fastapi]>=2.0.0",
    "climate-ref[aft-providers,postgres]>=0.6.3",
    "loguru",
    "pyyaml>=6.0",
    "fastapi-sqlalchemy-monitor>=1.1.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.8.0",
    "ruff>=0.12.0",
    "pre-commit>=4.0",
    "coverage>=7.4.3",
    "climate-ref-example",
    "pandas-stubs>=2.3.2.250827",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.uv.sources]
# Temporary pin for testing
climate-ref = { git = "https://github.com/Climate-REF/climate-ref", subdirectory = "packages/climate-ref", tag="v0.7.0" }
climate-ref-example = { git = "https://github.com/Climate-REF/climate-ref", subdirectory = "packages/climate-ref-example", tag="v0.7.0" }
# Uncomment the following line to use a local version of climate-ref
#climate-ref = { path = "../../climate-ref/packages/climate-ref", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]
mypy_path = ["stubs"]
